# Systematis-Compliance-Agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: pipeline_health.json
prompts/: compliance_risk.py  regulatory_review.py  resolution.py  root_cause.py
scripts/: build_vector_store.py  evaluate_pipeline.py  generate_golden_set.py  ingest_cfpb.py  init_db.sql
src/agents/: audit.py  classifier.py  intake.py  orchestrator.py  regulatory_review.py  resolution.py  root_cause.py  routing.py
src/api/: main.py
src/api/routes/: audit.py  complaints.py
src/classifier/: distilbert_classifier.py  train.py
src/config/: settings.py
src/fairness/: fairness_monitor.py
src/observability/: metrics.py
src/pipeline/: data_ingestion.py  embedding_provider.py  embeddings.py  kafka_consumer.py  pii_masker.py
src/rag/: chroma_client.py  knowledge_base.py
src/schemas/: models.py
src/tasks/: celery_app.py
src/utils/: json_parser.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/load/: locustfile.py
tests/unit/: test_fairness.py  test_pii_masker.py  test_routing.py  test_schemas.py
